; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_host.c_isci_intx_isr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_host.c_isci_intx_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_host = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@IRQ_NONE = common dso_local global i32 0, align 4
@SMU_ISR_COMPLETION = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isci_intx_isr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.isci_host*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @IRQ_NONE, align 4
  store i32 %7, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.isci_host*
  store %struct.isci_host* %9, %struct.isci_host** %6, align 8
  %10 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %11 = call i64 @sci_controller_isr(%struct.isci_host* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load i32, i32* @SMU_ISR_COMPLETION, align 4
  %15 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %16 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %15, i32 0, i32 2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = call i32 @writel(i32 %14, i32* %18)
  %20 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %21 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %20, i32 0, i32 1
  %22 = call i32 @tasklet_schedule(i32* %21)
  %23 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %23, i32* %5, align 4
  br label %39

24:                                               ; preds = %2
  %25 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %26 = call i64 @sci_controller_error_isr(%struct.isci_host* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %38

28:                                               ; preds = %24
  %29 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %30 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %29, i32 0, i32 0
  %31 = call i32 @spin_lock(i32* %30)
  %32 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %33 = call i32 @sci_controller_error_handler(%struct.isci_host* %32)
  %34 = load %struct.isci_host*, %struct.isci_host** %6, align 8
  %35 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %34, i32 0, i32 0
  %36 = call i32 @spin_unlock(i32* %35)
  %37 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %37, i32* %5, align 4
  br label %38

38:                                               ; preds = %28, %24
  br label %39

39:                                               ; preds = %38, %13
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i64 @sci_controller_isr(%struct.isci_host*) #1

declare dso_local i32 @writel(i32, i32*) #1

declare dso_local i32 @tasklet_schedule(i32*) #1

declare dso_local i64 @sci_controller_error_isr(%struct.isci_host*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @sci_controller_error_handler(%struct.isci_host*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
